# mySql4cpp

./: CMakeLists.txt  LICENSE  README.md
include/: mySql4cpp.hh
src/: mySql4cpp.cc  test.cc
